--- a/index.html
+++ b/index.html
@@ -32,6 +32,22 @@ integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3Ah
             <a class="nav-link" href="kontakt.html">Kontakt</a>
           </li>
         </ul>
+
+        <main>
+          
+          <section class="huvudsidan">
+            <h1>VÄLKOMMEN TILL VÅR FILMKLUBB!</h1>
+
+              <P>Vi är några webbutvecklande filmfantaster som träffas regelbundet för att förkovra
+               oss i film och popcorn.<br>
+               <br>
+              Här lägger vi upp tips på filmer som vi tycker att alla filmälskare ska se.
+              <br>
+              <br>
+              Enjoy, tipsa oss om filmer eller gå med i vår filmklubb!</P>
+          </section>
+        
+        </main>
         <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" 
 integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" 
