--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3Ah
             <a class="nav-link" aria-current="page" href="index.html">Hem</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Filmer</a>
+            <a class="nav-link" href="filmer.html">Filmer</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="kontakt.html">Kontakt</a>
