--- a/filmer.html
+++ b/filmer.html
@@ -56,9 +56,9 @@
     </section>-->
     <section>
         <!--<div class="filmcontainer">-->
-            <div class="flip-box">
+           <!-- <div class="flip-box">
                 <div class="flip-box-inner">
-                    <div class="flip-box-front">         
+                    <div class="flip-box-front">  -->       
                     <img src="bilder/en runda till.jpg" class="runda hörn" alt="en runda till" style="width:400">
                     </div>
                     <div class="flip-box-back">
@@ -76,9 +76,9 @@
                         </p>
                     </div>
           
-            <div class="flip-box">
+           <!-- <div class="flip-box">
                 <div class="flip-box-inner">
-                    <div class="flip-box-front">         
+                    <div class="flip-box-front">  -->       
                     <img src="bilder/totoro.jpg" class="runda hörn" alt="totoro" style="width:400">
                     </div>
                     <div class="flip-box-back">
@@ -92,9 +92,9 @@
                         </p>
                     </div>
     
-            <div class="flip-box">
+            <!--<div class="flip-box">
                 <div class="flip-box-inner">
-                    <div class="flip-box-front">       
+                    <div class="flip-box-front"> -->      
                     <img src="bilder/gökboet.jpg" class="runda hörn" alt="gökboet" style="width:400">
                 </div>
             <div class="flip-box-back">
@@ -108,9 +108,9 @@
                     och Syster Ratched där den ena ständigt försöker övervinna den andra
                 </p>
             </div>
-            <div class="flip-box">
+            <!--<div class="flip-box">
                 <div class="flip-box-inner">
-                    <div class="flip-box-front">       
+                    <div class="flip-box-front">  -->     
             <img src="bilder/grand budapest hotel.jpg" class="runda hörn" alt="grand budapest hotel" style="width:400"><div class="flip-box-back">
                 <h2>Grand Budapest hotel</h2>
                 <p>The Grand Budapest Hotel är en amerikansk-tysk komedifilm från 2014 skriven och regisserad av Wes Anderson, inspirerad av Stefan Zweigs berättelser.<br>
@@ -124,9 +124,9 @@
                     The Grand Budapest Hotel.
                 </p>
             </div>      
-            <div class="flip-box">
+            <!--<div class="flip-box">
                 <div class="flip-box-inner">
-                    <div class="flip-box-front">       
+                    <div class="flip-box-front">  -->     
             <img src="bilder/onda dockan.jpg" class="runda hörn" alt="onda dockan" style="width:400">
             <div class="flip-box-back">
                 <h2>Den onda dockan</h2>
@@ -136,9 +136,9 @@
                     Den första av sex filmer om den onda dockan.
                 </p>
             </div>
-            <div class="flip-box">
+            <!--<div class="flip-box">
                 <div class="flip-box-inner">
-                    <div class="flip-box-front">       
+                    <div class="flip-box-front"> -->      
                 <img src="bilder/allt om min mamma.jpg" class="unda hörn" alt="allt om min mamma" style=width:400">
                 </div>
                 <div class="flip-box-back">
