--- a/filmer.html
+++ b/filmer.html
@@ -36,30 +36,13 @@
       </ul>
     </header>
     <main> 
-        <!--<section>
-        <div>
-            <img src="bilder/en runda till.jpg" width="400">    
-        </div>
-    </section>
     
-    <section>
-        <div>
-            <img src="bilder/totoro.jpg" width="400"> 
-        </div>
-    </section>
-    
-    <section>
-        <div>
-        <img src="bilder/blommor.jpg" width="400">
-        </div>
-    </div>
-    </section>-->
-    <section>
-        <!--<div class="filmcontainer">-->
+    <section class="filmer">
+        <div class="filmcontainer">
            <!-- <div class="flip-box">
                 <div class="flip-box-inner">
                     <div class="flip-box-front">  -->       
-                    <img src="bilder/en runda till.jpg" class="runda hörn" alt="en runda till" style="width:400">
+                    <img src="bilder/en runda till.jpg" class="rund hörn" alt="en runda till" style="width:400">
                     </div>
                     <div class="flip-box-back">
                         <h2>En runda till</h2>
@@ -139,7 +122,7 @@
             <!--<div class="flip-box">
                 <div class="flip-box-inner">
                     <div class="flip-box-front"> -->      
-                <img src="bilder/allt om min mamma.jpg" class="unda hörn" alt="allt om min mamma" style=width:400">
+                <img src="bilder/allt om min mamma.jpg" class="runda hörn" alt="allt om min mamma" style=width:400">
                 </div>
                 <div class="flip-box-back">
                     <h2>Altt om min mamma</h2>
