--- a/filmer.html
+++ b/filmer.html
@@ -39,25 +39,33 @@
     
     <section class="filmer">
         <div class="filmcontainer">
+
+  
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <img src="bilder/en runda till.jpg">
+        <h2>En runda till</h2>
+            <p>En runda till, originaltitel Druk, är en dansk film i regi av Thomas Vinterberg. Den hade internationell premiär på Toronto 
+                International Film Festival[1] 12 oktober 2020 och biografpremiär i Sverige 9 april 2021. Filmen vann 2021 Oscar för bästa 
+                internationella långfilm 2020.
+                Filmen handlar om fyra lärarkollegor som kastar sig ut i ett experiment för att kontrollera en teori från en norsk filosof 
+                som hävdar att människan borde ha en högre halt alkohol i blodet. Den utnämndes till Årets film vid European Film Awards 2020. 
+                Thomas Vinterberg fick pris för bästa regi och manus och Mads Mikkelsen som bästa manliga skådespelare.[2] Filmen är Danmarks 
+                bidrag till Oscar 2021[3] och har nominerats till en Golden Globe för bästa utländska film.[4] En runda till har nominerats till 
+                en Oscar för bästa utländska film och Thomas Vinterberg för bästa regi.[5]
+                Vinterberg har tillägnat filmen sin dotter Ida Vinterberg som skulle ha haft en roll i filmen men omkom i en bilolycka samma vecka 
+                som inspelningarna startade.
+            </p>
+
+    </div>
+    </div>
+  </div>
            <!-- <div class="flip-box">
                 <div class="flip-box-inner">
                     <div class="flip-box-front">  -->       
-                    <img src="bilder/en runda till.jpg" class="rund hörn" alt="en runda till" style="width:400">
-                    </div>
-                    <div class="flip-box-back">
-                        <h2>En runda till</h2>
-                        <p>En runda till, originaltitel Druk, är en dansk film i regi av Thomas Vinterberg. Den hade internationell premiär på Toronto 
-                            International Film Festival[1] 12 oktober 2020 och biografpremiär i Sverige 9 april 2021. Filmen vann 2021 Oscar för bästa 
-                            internationella långfilm 2020.
-                            Filmen handlar om fyra lärarkollegor som kastar sig ut i ett experiment för att kontrollera en teori från en norsk filosof 
-                            som hävdar att människan borde ha en högre halt alkohol i blodet. Den utnämndes till Årets film vid European Film Awards 2020. 
-                            Thomas Vinterberg fick pris för bästa regi och manus och Mads Mikkelsen som bästa manliga skådespelare.[2] Filmen är Danmarks 
-                            bidrag till Oscar 2021[3] och har nominerats till en Golden Globe för bästa utländska film.[4] En runda till har nominerats till 
-                            en Oscar för bästa utländska film och Thomas Vinterberg för bästa regi.[5]
-                            Vinterberg har tillägnat filmen sin dotter Ida Vinterberg som skulle ha haft en roll i filmen men omkom i en bilolycka samma vecka 
-                            som inspelningarna startade.
-                        </p>
-                    </div>
+                    <img src="bilder/en runda till.jpg" class="rund hörn" alt="en runda till" style="width:400" data-bs-toggle="modal" data-bs-target="#exampleModal">
           
            <!-- <div class="flip-box">
                 <div class="flip-box-inner">
@@ -125,7 +133,7 @@
                 <img src="bilder/allt om min mamma.jpg" class="runda hörn" alt="allt om min mamma" style=width:400">
                 </div>
                 <div class="flip-box-back">
-                    <h2>Altt om min mamma</h2>
+                    <h2>Allt om min mamma</h2>
                     <p>Allt om min mamma (originaltitel: Todo sobre mi madre) är en fransk-spansk film från 1999 regisserad av Pedro Almodóvar.
                         Manuela bor ensam med sin son Esteban. Hon ger sin son en teaterbiljett i 17-årspresent. Efter föreställningen vill Esteban 
                         ha huvudrollsinnehavarens autograf och rusar efter hennes bil, men blir påkörd av en annan bil och avlider. Manuela vill komma 
