--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 rel="stylesheet" 
 integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU"
  crossorigin="anonymous">
+ <link
+ rel="stylesheet"
+ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+/>
     <title>Filmfantast</title>
 </head>
     
@@ -41,15 +45,15 @@ integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3Ah
         <main>
           
           <section class="huvudsidan">
-            <h1>VÄLKOMMEN TILL VÅR FILMKLUBB!</h1>
+            <h1 class="animate__animated animate__backInRight">VÄLKOMMEN TILL VÅR FILMKLUBB!</h1>
 
-              <P>Vi är några webbutvecklande filmfantaster som träffas regelbundet för att förkovra
+              <p class="animate__animated animate__zoomIn">Vi är några webbutvecklande filmfantaster som träffas regelbundet för att förkovra
                oss i film och popcorn.<br>
                <br>
               Här lägger vi upp tips på filmer som vi tycker att alla filmälskare ska se.
               <br>
               <br>
-              Enjoy, tipsa oss om filmer eller gå med i vår filmklubb!</P>
+              Enjoy, tipsa oss om filmer eller gå med i vår filmklubb!</p>
           </section>
 
           <div class="PicHolder">
