--- a/filmer.html
+++ b/filmer.html
@@ -4,15 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<<<<<<< HEAD
-    <link href="https://fonts.googleapis.com/css2?family=Reem+Kufi&display=swap" rel="stylesheet">
-=======
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Reem+Kufi&display=swap" rel="stylesheet">
     
 
->>>>>>> 25d89fecd462c4c15bbd842ae328cea10a6e92bc
  <!-- CSS only -->
  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" 
  rel="stylesheet" 
@@ -47,7 +43,7 @@
     
     <section class="filmer">
       <div class="filmcontainer">
-     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+     <div class="modal fade" id="exampleModal1" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
           <div class="modal-content">
             <img src="bilder/en runda till med text.jpg">
@@ -70,11 +66,11 @@
     </div>
 
     <div class="PicsWrap">
-    <img src="bilder/en runda till med text.jpg" class="galleryPics" alt="en runda till" data-bs-toggle="modal" data-bs-target="#exampleModal">
+    <img src="bilder/en runda till med text.jpg" class="galleryPics" alt="en runda till" data-bs-toggle="modal" data-bs-target="#exampleModal1">
   </div>
     <!--second picture-->
 
-    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal fade" id="exampleModal2" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
           <img src="bilder/allt om min mamma.jpg">
@@ -93,11 +89,11 @@
   </div>
 
   <div class="PicsWrap">
-  <img src="bilder/allt om min mamma.jpg" class="galleryPics" alt="allt om min mamma" data-bs-toggle="modal" data-bs-target="#exampleModal">
+  <img src="bilder/allt om min mamma.jpg" class="galleryPics" alt="allt om min mamma" data-bs-toggle="modal" data-bs-target="#exampleModal2">
   </div>
   <!--third picture-->
 
-  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal fade" id="exampleModal3" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <img src="bilder/grand budapest hotel.jpg">
@@ -120,11 +116,11 @@
 </div>
 
 <div class="PicsWrap">
-<img src="bilder/grand budapest hotel.jpg" class="galleryPics" alt="The Grand Budapest Hotel" data-bs-toggle="modal" data-bs-target="#exampleModal">
+<img src="bilder/grand budapest hotel.jpg" class="galleryPics" alt="The Grand Budapest Hotel" data-bs-toggle="modal" data-bs-target="#exampleModal3">
 </div>
 <!--fourth picture-->
 
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="exampleModal4" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <img src="bilder/gökboet.jpg">
@@ -144,11 +140,11 @@
 </div>
 
 <div class="PicsWrap">
-<img src="bilder/gökboet.jpg" class="galleryPics" alt="Gökboet" data-bs-toggle="modal" data-bs-target="#exampleModal">
+<img src="bilder/gökboet.jpg" class="galleryPics" alt="Gökboet" data-bs-toggle="modal" data-bs-target="#exampleModal4">
 </div>
 <!--Fifth pictures-->
 
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="exampleModal5" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <img src="bilder/onda dockan.jpg">
@@ -190,11 +186,11 @@
 </div>
 
 <div class="PicsWrap">
-<img src="bilder/onda dockan.jpg" class="galleryPics" alt="Den onda dockan" data-bs-toggle="modal" data-bs-target="#exampleModal">
+<img src="bilder/onda dockan.jpg" class="galleryPics" alt="Den onda dockan" data-bs-toggle="modal" data-bs-target="#exampleModal5">
 </div>
 <!--Sixth picture-->
 
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="exampleModal6" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <img src="bilder/totoro.jpg">
@@ -212,7 +208,7 @@
 </div>
 
 <div class="PicsWrap">
-<img src="bilder/totoro.jpg" class="galleryPics" alt="Min granne Totoro" data-bs-toggle="modal" data-bs-target="#exampleModal">
+<img src="bilder/totoro.jpg" class="galleryPics" alt="Min granne Totoro" data-bs-toggle="modal" data-bs-target="#exampleModal6">
 </div>
     </div>
     </section>
