--- a/filmer.html
+++ b/filmer.html
@@ -143,7 +143,7 @@
 </div>
 
 <div class="PicsWrap">
-<img src="bilder/gökboet.jpg" class="galleryPics" alt="Gökboet" data-bs-toggle="modal" data-bs-target="#exampleModal4">
+<img src="bilder/gökboet.jpg" styleclass="galleryPics" alt="Gökboet" data-bs-toggle="modal" data-bs-target="#exampleModal4">
 </div>
 <!--Fifth pictures-->
 
