--- a/filmer.html
+++ b/filmer.html
@@ -82,7 +82,8 @@
                 ha huvudrollsinnehavarens autograf och rusar efter hennes bil, men blir påkörd av en annan bil och avlider. Manuela vill komma 
                 i kontakt med Estebans far och åker till Barcelona, där han bor. Fadern har blivit transvestit och kallar sig Lola. Hon träffar 
                 en nunna som är gravid med Lola och HIV-positiv. Nunnan dör efter förlossningen och vid begravningen försonas Manuela med den döende 
-                Lola, som också kommit dit. Efter två år konstateras att barnet besegrat det medfödda viruset.                
+                Lola, som också kommit dit. Efter två år konstateras att barnet besegrat det medfödda viruset. Nunnan dör efter förlossningen och vid begravningen försonas Manuela med den döende 
+                Lola, som också kommit dit. Efter två år konstateras att barnet besegrat det medfödda viruset.                       
               </p>
           </div>
       </div>
@@ -135,7 +136,10 @@
             Randle Patrick McMurphy (Jack Nicholson) tror att han kan komma ifrån det hårda arbetet i fängelset genom att spela galen. 
             När han hamnar på ett mentalsjukhus försöker han liva upp stämningen genom att spela kort och basket med de andra patienterna. 
             Sådana påhitt tycker inte Syster Ratched (Louise Fletcher) om och det hela utvecklas till ett katt-och-råttaspel mellan McMurphy 
-            och Syster Ratched där den ena ständigt försöker övervinna den andra.
+            och Syster Ratched där den ena ständigt försöker övervinna den andra. Randle Patrick McMurphy (Jack Nicholson) tror att han kan komma ifrån det hårda arbetet i fängelset genom att spela galen. 
+            När han hamnar på ett mentalsjukhus försöker han liva upp stämningen genom att spela kort och basket med de andra patienterna. 
+            Sådana påhitt tycker inte Syster Ratched (Louise Fletcher) om och det hela utvecklas till ett katt-och-råttaspel mellan McMurphy 
+            och 
                 </p>
             </div>
         </div>
@@ -158,30 +162,7 @@
             (Chris Sarandon). Charles gömmer sig i en leksaksaffär och ryter åt Mike att han kommer döda honom och hans kollegor när han får chansen. 
             Charles för över sin själ till en Good-Guydocka med hjälp av voodookrafter och ett stort blixtnedslag förstör hela affären.
             Några dagar senare köper mamman Karen Barclay (Catherine Hicks) en Good-Guydocka av en luffare till sin 6-årige son Andy Barclay. Han blir 
-            överlycklig när han får den i present på sin födelsedag. När Karens väninna Maggie Peterson ska sitta barnvakt ber hon Andy att gå och sova. 
-            När han går iväg för att borsta tänderna sätts TV:n plötsligt på och dockan Chucky sitter i fåtöljen framför TV:n. Maggie blir arg och skickar 
-            Andy i säng.
-            Senare blir Maggie mystiskt slagen i huvudet med en hammare och faller ut genom köksfönstret och dör när hon landar på sin bil. Karen kommer hem 
-            och ser att Mike Norris intervjuar Andy. Han blir arg och misstänker Andy för mordet när han ser små fotavtryck på köksbordet i spillt mjöl. Andy 
-            ser mjölet på Chuckys skor och berättar att dockan stod på bordet. Denna varning blir bara som struntprat för mamman och polisen.
-            Karen och Andy försöker glömma allt och när Andy går till skolan pratar han med sin docka som om den levde. Andy går till ett övergivet hus och 
-            lämnar Chucky på en gungstol när han går och ser sig omkring. Plötsligt exploderar huset när brottslingen Eddie Caputo skjuter i ren panik mot sin 
-            ugn som hade gasolsprutaren på.
-            Andy blir återigen misstänkt och blir skickad till mentalsjukhus när han säger att Chucky var den som orsakade explosionen. Karen går tillbaks till 
-            sin lägenhet med Chucky på armen. Hon blir alltmer övertygad om att dockan ligger bakom allt men tror att hon bara är snurrig. När hon ska slänga 
-            förpackningen ramlar 2 batterier ur lådan och då inser hon att dockan pratar utan batterier. Hon hotar dockan med att slänga den i elden i spisen. 
-            Chucky vaknar till liv och använder sin vrede i ett försök att döda Karen. Hon kastar iväg Chucky och springer iväg och flyr via hissen och ut på 
-            gatorna. Senare blir Mike attackerad i sin bil av Chucky som försöker strypa Mike. Bilen voltar och Chucky försöker knivhugga Mike men han skjuter 
-            Chucky i axeln som sedan försvinner ut i natten.
-            Karen får reda på att Chucky ofta var med en voodoolärare vid namn Dr Death. Mike lyckas också ta reda på att Charles Lee Rays smeknamn råkar vara Chucky. 
-            De bestämmer sig för att hitta denna man innan Chucky gör det. Men Chucky hittar sin voodoolärare och tvingar honom att berätta varför skottskadan gör ont och varför det blöder. Death berättar att ju längre Chucky är 
-            i dockkroppen desto mer mänsklig blir han. Det betyder att om Chucky inte tar sig ut ur dockkroppen blir han fast i den för alltid. Detta vill inte 
-            Chucky och han tvingar sin lärare att berätta hur han ska komma ut ur kroppen, men Death vägrar. Då tar Chucky sin lärares vooodoodocka och bryter 
-            benet och armen som tortyr och hotar med att knivhugga den. Death berättar att Chucky måste föra över sin själ till den första människan han berättade 
-            sin sanna identitet till. Chucky kommer på att den första som visste det var Andy. Innan han ger sig iväg till sjukhuset knivhugger Chucky voodoodockan och lämnar Death att förblöda.
-            Karen och Mike kommer sedan till Death, som innan han dör berättar att Chucky kan dödas om man skjuter genom hans hjärta. Chucky kommer fram till sjukhuset men Andy hinner fly till operationssalen, där han blir fångad av huvudläkaren som vill ge honom lugnande medicin. Chucky hugger läkaren i benet med en skalpell och elchockar honom till döds med en defibrillator och Andy hinner springa iväg. Karen och Mike lyckas komma på att om Andy fick problem så skulle han gå hem. Båda ger sig iväg till lägenheten men Chucky hinner före och slår Andy medvetslös med ett basebollträ.
-            Chucky påbörjar ritualen men stoppas av Mike och Karen. Chucky hugger Mike i vaden med sin kniv och springer längre in i lägenheten. Mike förbinder sitt sår och letar efter Chucky men blir slagen medvetslös av Chucky. Karen skjuter Chucky i benet, men han reser sig igen och hoppar på henne. Andy och Karen slänger in Chucky i spisen och bränner honom levande.
-            Karen går till Mike och ber Andy hämta förbandslådan, men märker då att Chucky är borta. Andy springer till Karen men snubblar när den brände Chucky lägger krokben för honom. Karen och Andy lyckas fly från dockan och hon skjuter Chucky i bitar. En till polis kommer in i lägenheten och hittar Chuckys kvarlevor. Han påstår att dockan inte lever men blir nästan strypt till döds av Chuckys halvt ihjälbrända kropp. Mike lyckas skjuta dockan i hjärtat och kroppen sjunker ihop i ett hörn. Andy och Karen tar Mike till sjukhuset och Andy tar en sista titt på Chuckys huvud innan han stänger dörren.
+            överlycklig när han får den i present på sin födelsedag.  lever men blir nästan strypt till döds av Chuckys halvt ihjälbrända kropp. Mike lyckas skjuta dockan i hjärtat och kroppen sjunker ihop i ett hörn. Andy och Karen tar Mike till sjukhuset och Andy tar en sista titt på Chuckys huvud innan han stänger dörren.
           </p>
         </div>
   </div>
@@ -203,6 +184,7 @@
               och producerad av Studio Ghibli. I handlingens centrum står en familj bestående av en far och två döttrar som på 1950-talet flyttar in 
               i ett gammalt hus ute på landet med avsikt att komma närmare barnens mor som är inlagd på sjukhus. Filmen är en av Studio Ghiblis och 
               Miyazakis mest kända produktioner. Den stora och lurviga titelfiguren har också blivit föremål för en mängd kringprodukter – inte minst 
+              som gosedjur. Miyazakis mest kända produktioner. Den stora och lurviga titelfiguren har också blivit föremål för en mängd kringprodukter – inte minst 
               som gosedjur.
           </p>
         </div>
