har flytat alla bilder och skrivit nya länkar till dom

--- a/filmer.html
+++ b/filmer.html
@@ -24,7 +24,7 @@
 <body>
     <header>
         <div id="logo">
-        <img class="img-fluid" src="logo.png" alt="logotype">
+        <img class="img-fluid" src="bilder/logo.png" alt="logotype">
         </div> 
     
         <ul class="nav nav-pills">
