--- a/kontakt.html
+++ b/kontakt.html
@@ -20,7 +20,7 @@ integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3Ah
   
       
         <div id="logo">
-          <img class="img-fluid" src="logo.png" alt="logotype">
+          <img class="img-fluid" src="bilder/logo.png" alt="logotype">
         </div> 
         <header>
           
